@@ -4,10 +4,6 @@
 
 package de.freese.spring.thymeleaf;
 
-import java.awt.Desktop;
-import java.net.URI;
-import java.net.URL;
-import javax.annotation.Resource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.boot.CommandLineRunner;
@@ -15,6 +11,10 @@ import org.springframework.context.annotation.Profile;
 import org.springframework.core.annotation.Order;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
+
+import javax.annotation.Resource;
+import java.awt.*;
+import java.net.URI;
 
 /**
  * @author Thomas Freese
@@ -25,8 +25,8 @@ import org.springframework.stereotype.Component;
 public class OpenBrowserRunner implements CommandLineRunner
 {
     /**
-    *
-    */
+     *
+     */
     public static final Logger LOGGER = LoggerFactory.getLogger(OpenBrowserRunner.class);
 
     /**
@@ -47,21 +47,20 @@ public class OpenBrowserRunner implements CommandLineRunner
      * @see org.springframework.boot.CommandLineRunner#run(java.lang.String[])
      */
     @Override
-    public void run(final String...args) throws Exception
+    public void run(final String... args) throws Exception
     {
         LOGGER.info("");
 
         String rootUri = ThymeleafApplication.getRootUri(this.environment);
-        URL url = new URL(rootUri);
-        URI uri = url.toURI();
+        URI uri = URI.create(rootUri);
 
         try
         {
             // Firefox: view-source:URI
             Runtime.getRuntime().exec(new String[]
-            {
-                    "C:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe", "-new-tab", url.toString()
-            });
+                    {
+                            "C:\\Program Files (x86)\\Mozilla Firefox\\firefox.exe", "-new-tab", uri.toString()
+                    });
         }
         catch (Exception ex)
         {
@@ -69,9 +68,9 @@ public class OpenBrowserRunner implements CommandLineRunner
             {
                 // Linux
                 Runtime.getRuntime().exec(new String[]
-                {
-                        "firefox", "-new-tab", url.toString()
-                });
+                        {
+                                "firefox", "-new-tab", uri.toString()
+                        });
             }
             catch (Exception ex2)
             {
@@ -79,10 +78,10 @@ public class OpenBrowserRunner implements CommandLineRunner
                 {
                     // Linux
                     Runtime.getRuntime().exec(new String[]
-                    {
-                            // chromium %U --disk-cache-dir=/tmp/.chrome/cache --media-cache-dir=/tmp/.chrome/cache_media
-                            "chromium", url.toString()
-                    });
+                            {
+                                    // chromium %U --disk-cache-dir=/tmp/.chrome/cache --media-cache-dir=/tmp/.chrome/cache_media
+                                    "chromium", uri.toString()
+                            });
                 }
                 catch (Exception ex3)
                 {
